<resources>
    <string name="app_name">UPC RUSH</string>
    <string name="logInBtn">Log in</string>
    <string name="signUpTextView">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="not_created_yet">Not created yet</string>
    <string name="main_menu">Main menu</string>
    <string name="exit">Exit</string>
    <string name="textview">Welcome!</string>
    <string name="new_game">NEW GAME</string>
    <string name="new_game_image">new game</string>
    <string name="storageImage">TODO</string>
    <string name="stroageImage">TODO</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="current_money">Current money</string>
    <string name="returnBtn">Return</string>
    <string name="delete">Delete account</string>
    <string name="el_mejor_jugador">el mejor jugador</string>
    <string name="el_jugador_con_menos_karma">el jugador con menos karma</string>
    <string name="el_jugador_mas_benevolente">el jugador mas benevolente</string>
    <string name="el_jugador_m_s_ecologista">el jugador más ecologista</string>
    <string name="el_m_s_legendario">el más legendario</string>
    <string name="el_peor_jugador">el peor jugador</string>
    <string name="todo">TODO</string>

</resources>